--- a/halo/details.html
+++ b/halo/details.html
@@ -19,7 +19,7 @@
     <header id="header">
       <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-xl px-4 px-sm-5 px-xl-0">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt=""></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh"></a>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="search-bar-till-md">
               <input class="search-area" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="search-result.html"><i class="fas fa-search"></i></a>
@@ -52,7 +52,7 @@
           <div class="modal-content"> 
             <div class="modal-header flex-wrap">
               <button class="close" type="button" data-dismiss="modal">&times;</button>
-              <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt=""></div>
+              <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt="halo thế giới máy ảnh"></div>
               <p class="w-100 font-18 text-center font-weight-bold log">Đăng nhập  </p>
               <p class="w-100 font-18 text-center font-weight-bold reg">Đăng ký</p>
             </div>
@@ -79,7 +79,7 @@
               <button class="btn logreg__submit btn--dark log">Đăng nhập</button>
               <button class="btn logreg__submit btn--dark font-14 reg">Gia nhập cộng đồng HALO</button>
               <p class="log">Hoặc đăng nhập với </p>
-              <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt=""></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt=""></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt=""></a></div>
+              <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt="halo thế giới máy ảnh"></a></div>
             </div>
             <div class="modal-footer"><a class="logreg-portal mx-auto reg" onclick="logregSwitch()">Quay lại đăng nhập</a>
               <p class="mx-auto log">Chưa có tài khoản? <a class="logreg-portal" onclick="logregSwitch()">Đăng ký ngay </a></p>
@@ -101,12 +101,12 @@
           <h2 class="score--user font-weight-bold text-left">Người dùng đánh giá: <span>x / 5</span></h2>
           <h2 class="score--shop font-weight-bold text-left">HALO đánh giá: <span>x / 5</span></h2>
         </div>
-        <section class="details__img-area"><img class="details__main-img" src="img/img--details/detail__main-img-1.jpg" alt="">
-          <div class="details__sub-img-area"><img class="details__sub-img" src="img/img--details/detail__main-img-1.jpg" alt=""><img class="details__sub-img" src="img/img--details/detail__sub-img-1.jpg" alt=""><img class="details__sub-img" src="img/img--details/detail__sub-img-2.jpg" alt=""><img class="details__sub-img" src="img/img--details/detail__sub-img-3.jpg" alt=""><img class="details__sub-img" src="img/img--details/detail__sub-img-4.jpg" alt=""><img class="details__sub-img" src="img/img--details/detail__sub-img-5.jpg" alt=""></div>
+        <section class="details__img-area"><img class="details__main-img" src="img/img--details/detail__main-img-1.jpg" alt="Canon 1DX Mark III">
+          <div class="details__sub-img-area"><img class="details__sub-img" src="img/img--details/detail__main-img-1.jpg" alt="Canon 1DX Mark III"><img class="details__sub-img" src="img/img--details/detail__sub-img-1.jpg" alt="Canon 1DX Mark III"><img class="details__sub-img" src="img/img--details/detail__sub-img-2.jpg" alt="Canon 1DX Mark III"><img class="details__sub-img" src="img/img--details/detail__sub-img-3.jpg" alt="Canon 1DX Mark III"><img class="details__sub-img" src="img/img--details/detail__sub-img-4.jpg" alt="Canon 1DX Mark III"><img class="details__sub-img" src="img/img--details/detail__sub-img-5.jpg" alt="Canon 1DX Mark III"></div>
           <div class="modal fade" id="main-img--full-size">
             <div class="modal-dialog modal-dialog-centered">
               <div class="modal-content">
-                <button class="close" type="button" data-dismiss="modal">&times;</button><img src="img/img--details/sample-1.png" alt="">
+                <button class="close" type="button" data-dismiss="modal">&times;</button><img src="img/img--details/sample-1.png" alt="Canon 1DX Mark III">
               </div>
             </div>
           </div>
@@ -136,7 +136,7 @@
         <section class="details__offers"> 
           <div class="offers__gift">
             <h2 class="details__sub-header">Quà tặng <br><span class="font-14 font-italic font-weight-normal">(Tổng giá trị 900.000đ)</span></h2>
-            <div class="gift-wrapper"> <img class="gift-img" src="img/img--details/gift-img-2.jpg" alt=""><img class="gift-img" src="img/img--details/gift-img-2.jpg" alt=""><img class="gift-img" src="img/img--details/gift-img-2.jpg" alt=""></div>
+            <div class="gift-wrapper"> <img class="gift-img" src="img/img--details/gift-img-2.jpg" alt="quà tặng Canon 1DX Mark III"><img class="gift-img" src="img/img--details/gift-img-2.jpg" alt="quà tặng Canon 1DX Mark III"><img class="gift-img" src="img/img--details/gift-img-2.jpg" alt="quà tặng Canon 1DX Mark III"></div>
           </div>
           <div class="offers__special">
             <h2 class="details__sub-header">Ưu đãi đặc biệt</h2>
@@ -153,14 +153,14 @@
         <section class="details__main-info">
           <div class="main-info__toggler" data-toggle="collapse" data-target="#intro"><span class="details__sub-header">Giới thiệu</span><span class="main-info__toggler-indicator"><i class="fas fa-chevron-up"></i></span></div>
           <div class="main-info__content collapse show" id="intro">
-            <h3 class="main-info__inner-header">Cảm biến mới, hệ thống hình ảnh mới</h3><img src="img/img--details/intro-img-1.jpg" alt="">
-            <p>Canon EOS 1D X Mark III sử dụng cảm biến hoàn toàn mới 20.1MP kết hợp với bộ xử lý hình ảnh DIGIC X mang lại chất lượng hình ảnh sắc nét ấn tượng với độ chi tiết cao nhất, giảm thiểu xác suất sai màu và hiệu ứng mới. </p><img src="img/img--details/intro-img-2.png" alt="">
+            <h3 class="main-info__inner-header">Cảm biến mới, hệ thống hình ảnh mới</h3><img src="img/img--details/intro-img-1.jpg" alt="Canon 1DX Mark III">
+            <p>Canon EOS 1D X Mark III sử dụng cảm biến hoàn toàn mới 20.1MP kết hợp với bộ xử lý hình ảnh DIGIC X mang lại chất lượng hình ảnh sắc nét ấn tượng với độ chi tiết cao nhất, giảm thiểu xác suất sai màu và hiệu ứng mới. </p><img src="img/img--details/intro-img-2.png" alt="Canon 1DX Mark III">
             <p>Ngoài tốc độ ấn tượng, bộ xử lý cảm biến còn có phạm vi độ nhạy của dải ISO từ 100-102400, có thể mở rộng thành ISO 50-819200 để hỗ trợ làm việc trong nhiều điều kiện ánh sáng khác nhau. </p>
-            <h3 class="main-info__inner-header">Hệ thống lấy nét</h3><img src="img/img--details/intro-img-3.jpg" alt="">
+            <h3 class="main-info__inner-header">Hệ thống lấy nét</h3><img src="img/img--details/intro-img-3.jpg" alt="Canon 1DX Mark III">
             <p>Canon EOS 1DX Mark III sử dụng cảm biến AF mới với khả năng tự động lấy nét chính xác qua kính ngắm, Live View và video. Thông qua kính ngắm, hệ thống AF gồm 191 điểm lấy nét nhanh và chính xác tuyệt đối không chỉ ở tốc độ mà còn đạt khả năng AF Tracking mới. Về cách nhận diện khuôn mặt, EOS-1D X Mark III hỗ trợ công nghệ Head Detection kết hợp Deep Learning và khả năng đọc, phân tích chủ thể thông qua hình dạng và màu sắc.</p>
-            <h3 class="main-info__inner-header">Tốc độ đỉnh cao</h3><img src="img/img--details/intro-img-4.jpg" alt="">
+            <h3 class="main-info__inner-header">Tốc độ đỉnh cao</h3><img src="img/img--details/intro-img-4.jpg" alt="Canon 1DX Mark III">
             <p>Tốc độ chụp nhanh của Burst Shooting mang đến cơ hội cao hơn cho các nhiếp ảnh gia chuyên nghiệp để ghi lại khoảnh khắc chính xác với bố cục hoàn hảo. Máy ảnh EOS-1D X Mark III có tốc độ chụp ấn tượng lên tới 16 khung hình / giây bằng kính ngắm, đồng bộ với hệ thống AF / AE mới được phát triển để đáp ứng nhanh về lấy nét tự động chính xác và kiểm soát phơi sáng trong mọi lần chụp quyết định.</p>
-            <h3 class="main-info__inner-header">Thiết kế bền bỉ</h3><img src="img/img--details/intro-img-6.png" alt="">
+            <h3 class="main-info__inner-header">Thiết kế bền bỉ</h3><img src="img/img--details/intro-img-6.png" alt="Canon 1DX Mark III">
             <p>EOS-1D X Mark III được trang bị độ bền cơ chế màn trập khoảng 500.000 shot. Được thiết kế với thân máy bằng hợp kim magiê chắc chắn, có khả năng chống bụi và ẩm xung quanh các khu vực quan trọng, EOS-1D X Mark III sẵn sàng chống đỡ trong mọi nhiệm vụ.</p>
           </div>
           <div class="main-info__toggler" data-toggle="collapse" data-target="#specs"><span class="details__sub-header">Thông số kỹ thuật</span><span class="main-info__toggler-indicator"> <i class="fas fa-chevron-up"></i></span></div>
@@ -257,7 +257,7 @@
             </div>
           </div>
           <div class="main-info__toggler" data-toggle="collapse" data-target="#review"><span class="details__sub-header">Đánh giá của HALO</span><span class="main-info__toggler-indicator"> <i class="fas fa-chevron-up"></i></span></div>
-          <div class="main-info__content collapse show" id="review"><img class="review__img d-block" src="img/img--details/review-img.jpg" alt="">
+          <div class="main-info__content collapse show" id="review"><img class="review__img d-block" src="img/img--details/review-img.jpg" alt="đánh giá Canon 1DX Mark III">
             <div class="review__content">
               <h1 class="review__header text-left">Canon 1DX Mark III: Vua của các vị vua</h1>
               <div class="review__sub-header"> <span class="author font-italic">Trung Đức</span><span class="time font-italic"> <i class="far fa-clock"></i>01/01/2021</span></div>
@@ -268,12 +268,12 @@
           <div class="main-info__toggler" data-toggle="collapse" data-target="#sample"><span class="details__sub-header">Ảnh chụp mẫu </span><span class="main-info__toggler-indicator"> <i class="fas fa-chevron-up"></i></span></div>
           <div class="main-info__content collapse show" id="sample">
             <div class="card-columns"> 
-              <div class="card"><img src="img/img--details/sample-1.png" alt="" data-toggle="modal" data-target="#sample--full-size"></div>
-              <div class="card"><img src="img/img--details/sample-2.png" alt="" data-toggle="modal" data-target="#sample--full-size"></div>
-              <div class="card"><img src="img/img--details/sample-3.png" alt="" data-toggle="modal" data-target="#sample--full-size"></div>
-              <div class="card"><img src="img/img--details/sample-1.png" alt="" data-toggle="modal" data-target="#sample--full-size"></div>
-              <div class="card"><img src="img/img--details/sample-2.png" alt="" data-toggle="modal" data-target="#sample--full-size"></div>
-              <div class="card"><img src="img/img--details/sample-3.png" alt="" data-toggle="modal" data-target="#sample--full-size"></div>
+              <div class="card"><img src="img/img--details/sample-1.png" alt="chụp mẫu Canon 1DX Mark III" data-toggle="modal" data-target="#sample--full-size"></div>
+              <div class="card"><img src="img/img--details/sample-2.png" alt="chụp mẫu Canon 1DX Mark III" data-toggle="modal" data-target="#sample--full-size"></div>
+              <div class="card"><img src="img/img--details/sample-3.png" alt="chụp mẫu Canon 1DX Mark III" data-toggle="modal" data-target="#sample--full-size"></div>
+              <div class="card"><img src="img/img--details/sample-1.png" alt="chụp mẫu Canon 1DX Mark III" data-toggle="modal" data-target="#sample--full-size"></div>
+              <div class="card"><img src="img/img--details/sample-2.png" alt="chụp mẫu Canon 1DX Mark III" data-toggle="modal" data-target="#sample--full-size"></div>
+              <div class="card"><img src="img/img--details/sample-3.png" alt="chụp mẫu Canon 1DX Mark III" data-toggle="modal" data-target="#sample--full-size"></div>
             </div>
             <div class="modal fade" id="sample--full-size">
               <div class="modal-dialog modal-dialog-centered">
@@ -318,7 +318,7 @@
         <section class="details__recommend">
           <h2 class="details__sub-header">Sản phẩm đi kèm khuyên dùng</h2>
           <div class="recommend__wrapper">
-            <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt="canon-eos-5d-mark-iv"><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
                 <div class="item__header">
                   <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark&nbsp;IV</p>
@@ -328,7 +328,7 @@
                 <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
               </div>
             </div>
-            <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-2.jpg" alt="Fujifilm X-E3 Silver"><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
                 <div class="item__header">
                   <p class="item__name font-weight-bold">Fujifilm X-E3 Silver</p>
@@ -343,7 +343,7 @@
       </div>
     </main>
     <footer class="dark-side" id="footer"> 
-      <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
+      <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh">
         <ul class="footer__menu d-flex justify-content-between align-items-center">
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Giới thiệu</a></li>
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Hỗ trợ</a></li>
