--- a/halo/dslr-hub.html
+++ b/halo/dslr-hub.html
@@ -19,7 +19,7 @@
     <header id="header">
       <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-xl px-4 px-sm-5 px-xl-0">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt=""></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh"></a>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="search-bar-till-md">
               <input class="search-area" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="search-result.html"><i class="fas fa-search"></i></a>
@@ -52,7 +52,7 @@
           <div class="modal-content"> 
             <div class="modal-header flex-wrap">
               <button class="close" type="button" data-dismiss="modal">&times;</button>
-              <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt=""></div>
+              <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt="halo thế giới máy ảnh"></div>
               <p class="w-100 font-18 text-center font-weight-bold log">Đăng nhập  </p>
               <p class="w-100 font-18 text-center font-weight-bold reg">Đăng ký</p>
             </div>
@@ -79,7 +79,7 @@
               <button class="btn logreg__submit btn--dark log">Đăng nhập</button>
               <button class="btn logreg__submit btn--dark font-14 reg">Gia nhập cộng đồng HALO</button>
               <p class="log">Hoặc đăng nhập với </p>
-              <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt=""></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt=""></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt=""></a></div>
+              <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt="halo thế giới máy ảnh"></a></div>
             </div>
             <div class="modal-footer"><a class="logreg-portal mx-auto reg" onclick="logregSwitch()">Quay lại đăng nhập</a>
               <p class="mx-auto log">Chưa có tài khoản? <a class="logreg-portal" onclick="logregSwitch()">Đăng ký ngay </a></p>
@@ -237,7 +237,7 @@
           </div>
           <div class="promo--aside hidden-till-md">
             <h1>Tin khuyến mại</h1>
-            <div class="promo__collection"><img class="promo-item" src="img/img--misc/promo-img-1.jpg" alt=""><img class="promo-item" src="img/img--misc/promo-img-2.jpg" alt=""><img class="promo-item" src="img/img--misc/promo-img-1.jpg" alt=""></div>
+            <div class="promo__collection"><img class="promo-item" src="img/img--misc/promo-img-1.jpg" alt="khuyến mại máy ảnh"><img class="promo-item" src="img/img--misc/promo-img-2.jpg" alt="khuyến mại máy ảnh"><img class="promo-item" src="img/img--misc/promo-img-1.jpg" alt="khuyến mại máy ảnh"></div>
           </div>
         </aside>
         <div class="dslr-hub__main-area">
@@ -250,7 +250,7 @@
             </div>
           </div>
           <div class="main-area__items-area grid">
-            <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt="canon-eos-5d-mark-iv"><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
                 <div class="item__header">
                   <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark&nbsp;IV</p>
@@ -260,7 +260,7 @@
                 <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
               </div>
             </div>
-            <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-2.jpg" alt="Fujifilm X-E3 Silver"><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
                 <div class="item__header">
                   <p class="item__name font-weight-bold">Fujifilm X-E3 Silver</p>
@@ -270,7 +270,7 @@
                 <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">17.490.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 7.200.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
               </div>
             </div>
-            <div class="card item item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt="Sony Alpha A7 Mark II"><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
                 <div class="item__header">
                   <p class="item__name font-weight-bold">Sony Alpha A7 Mark&nbsp;II</p>
@@ -280,7 +280,7 @@
                 <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">26.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 3.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
               </div>
             </div>
-            <div class="card item item--hot item--love"><img class="card-img-top" src="img/img--item/item-4.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--love"><img class="card-img-top" src="img/img--item/item-4.jpg" alt="Nikon D7500"><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
                 <div class="item__header">
                   <p class="item__name font-weight-bold">Nikon D7500</p>
@@ -290,7 +290,7 @@
                 <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">22.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 5.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
               </div>
             </div>
-            <div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt="Canon EOS 1DX Mark III"><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
                 <div class="item__header">
                   <p class="item__name font-weight-bold">Canon EOS 1DX Mark&nbsp;III</p>
@@ -300,7 +300,7 @@
                 <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">138.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
               </div>
             </div>
-            <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt="canon-eos-5d-mark-iv"><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
                 <div class="item__header">
                   <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark&nbsp;IV</p>
@@ -310,7 +310,7 @@
                 <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
               </div>
             </div>
-            <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-2.jpg" alt="Fujifilm X-E3 Silver"><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
                 <div class="item__header">
                   <p class="item__name font-weight-bold">Fujifilm X-E3 Silver</p>
@@ -320,7 +320,7 @@
                 <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">17.490.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 7.200.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
               </div>
             </div>
-            <div class="card item item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt="Sony Alpha A7 Mark II"><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
                 <div class="item__header">
                   <p class="item__name font-weight-bold">Sony Alpha A7 Mark&nbsp;II</p>
@@ -330,7 +330,7 @@
                 <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">26.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 3.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
               </div>
             </div>
-            <div class="card item item--hot item--love"><img class="card-img-top" src="img/img--item/item-4.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--love"><img class="card-img-top" src="img/img--item/item-4.jpg" alt="Nikon D7500"><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
                 <div class="item__header">
                   <p class="item__name font-weight-bold">Nikon D7500</p>
@@ -352,7 +352,7 @@
       </div>
     </main>
     <footer class="dark-side" id="footer"> 
-      <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
+      <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh">
         <ul class="footer__menu d-flex justify-content-between align-items-center">
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Giới thiệu</a></li>
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Hỗ trợ</a></li>
