--- a/halo/parts/card-3.html
+++ b/halo/parts/card-3.html
@@ -1,5 +1,5 @@
 
-<div class="card item item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""/><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""/><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt=""/>
+<div class="card item item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt="Sony Alpha A7 Mark II"/><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""/><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt=""/>
   <div class="card-body text-center">
     <div class="item__header">
       <p class="item__name font-weight-bold">Sony Alpha A7 Mark&nbsp;II</p>
