--- a/halo/parts/main-carousel.html
+++ b/halo/parts/main-carousel.html
@@ -24,13 +24,13 @@
         </div>
         <div class="carousel-caption__img"></div>
         <div class="carousel-caption__extra hidden-till-md">
-          <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-1-extra-1.png" alt=""/>
+          <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-1-extra-1.png" alt="Canon EOS R"/>
             <p class="extra-text">LẤY NÉT TỰ ĐỘNG DUAL PIXEL CMOS </p>
           </div>
-          <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-1-extra-2.png" alt=""/>
+          <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-1-extra-2.png" alt="Canon EOS R"/>
             <p class="extra-text">TỐI ƯU HÓA ĐIỀU KHIỂN </p>
           </div>
-          <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-1-extra-3.png" alt=""/>
+          <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-1-extra-3.png" alt="Canon EOS R"/>
             <p class="extra-text">QUAY VIDEO ĐA CHẾ ĐỘ ĐỘ PHÂN GIẢI 4K</p>
           </div>
         </div>
@@ -45,16 +45,16 @@
               <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
             </div>
             <div class="logo-sony-a9-wrapper">
-              <p class="logo-sony">SONY</p><img class="a9-logo" src="img/img--carousel/a9-logo.png" alt=""/>
+              <p class="logo-sony">SONY</p><img class="a9-logo" src="img/img--carousel/a9-logo.png" alt="SONY a9 mark 2"/>
             </div>
             <div class="progress display-till-md" style="height: 5px">
               <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
             </div>
           </div>
           <div class="carousel-caption__extra hidden-till-md">
-            <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-1.png" alt=""/></div>
-            <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-2.png" alt=""/></div>
-            <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-3.png" alt=""/></div>
+            <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-1.png" alt="SONY a9 mark 2"/></div>
+            <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-2.png" alt="SONY a9 mark 2"/></div>
+            <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-3.png" alt="SONY a9 mark 2"/></div>
           </div>
           <p class="main-carousel__text display-till-md">SỰ HOÀN HẢO</p>
           <p class="main-carousel__text hidden-till-md">Sự hoàn hảo chưa bao giờ đơn giản đến vậy</p>
@@ -68,7 +68,7 @@
         <h1 class="carousel-title font-weight-bold">Tiêu điểm tháng 1</h1>
         <div class="carousel-caption__text">
           <div class="logo-wrapper-3">
-            <p class="logo-sony">SONY</p><span class="collab"><i class="fas fa-times"></i></span><img class="lotr-logo" src="img/img--carousel/lotr-logo.png" alt=""/>
+            <p class="logo-sony">SONY</p><span class="collab"><i class="fas fa-times"></i></span><img class="lotr-logo" src="img/img--carousel/lotr-logo.png" alt="lord of the rings"/>
           </div>
           <div class="carousel-caption__img--triple hidden-till-md">
             <div class="carousel-caption__img"></div>
