--- a/halo/review-details.html
+++ b/halo/review-details.html
@@ -19,7 +19,7 @@
     <header id="header">
       <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-xl px-4 px-sm-5 px-xl-0">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt=""></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh"></a>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="search-bar-till-md">
               <input class="search-area" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="search-result.html"><i class="fas fa-search"></i></a>
@@ -52,7 +52,7 @@
           <div class="modal-content"> 
             <div class="modal-header flex-wrap">
               <button class="close" type="button" data-dismiss="modal">&times;</button>
-              <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt=""></div>
+              <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt="halo thế giới máy ảnh"></div>
               <p class="w-100 font-18 text-center font-weight-bold log">Đăng nhập  </p>
               <p class="w-100 font-18 text-center font-weight-bold reg">Đăng ký</p>
             </div>
@@ -79,7 +79,7 @@
               <button class="btn logreg__submit btn--dark log">Đăng nhập</button>
               <button class="btn logreg__submit btn--dark font-14 reg">Gia nhập cộng đồng HALO</button>
               <p class="log">Hoặc đăng nhập với </p>
-              <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt=""></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt=""></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt=""></a></div>
+              <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt="halo thế giới máy ảnh"></a></div>
             </div>
             <div class="modal-footer"><a class="logreg-portal mx-auto reg" onclick="logregSwitch()">Quay lại đăng nhập</a>
               <p class="mx-auto log">Chưa có tài khoản? <a class="logreg-portal" onclick="logregSwitch()">Đăng ký ngay </a></p>
@@ -94,7 +94,7 @@
           <li class="breadcrumb-item active">Canon 1DX Mark III: Vua của các vị&nbsp;vua</li>
         </ul>
       </div>
-      <div class="review__main-banner"><img class="main-banner__logo" src="img/img--misc/logo-white.png" alt=""><img class="main-banner__text" src="img/img--review/banner-text.png" alt=""></div>
+      <div class="review__main-banner"><img class="main-banner__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh"><img class="main-banner__text" src="img/img--review/banner-text.png" alt="đánh giá máy ảnh"></div>
       <section class="main-area container-xl">
         <div class="review__post-area review-article">
           <h1 class="review-article__header text-left">Canon 1DX Mark III: Vua của các vị&nbsp;vua</h1>
@@ -103,30 +103,30 @@
           <div class="review-article__content">
             <div class="article__section article__section--design">
               <h2 class="article__header">THIẾT KẾ</h2>
-              <figure class="figure--full"> <img src="img/img--review/article-img-1.jpg" alt="">
-                <figcaption>Một trong những chiếc máy to nhất trong mọi máy full-frame, trọng lượng khoảng 1.5kg.</figcaption>
+              <figure class="figure--full"> <img src="img/img--review/article-img-1.jpg" alt="1DX mark III">
+                <figcaption>Một trong những chiếc máy to nhất trong mọi máy full-frame, trọng lượng khoảng&nbsp;1.5kg.</figcaption>
               </figure>
-              <figure class="figure--full"> <img src="img/img--review/article-img-2.jpg" alt="">
+              <figure class="figure--full"> <img src="img/img--review/article-img-2.jpg" alt="1DX mark III">
                 <figcaption>Nikon D850 (trái) đặt cạnh 1DX mark III (bên&nbsp;phải)</figcaption>
               </figure>
               <p class="article__text">Đây là một trong những chiếc máy ảnh full-frame đắt nhất của Canon có giá bán là 189 triệu đồng (tính đến 2020). Không chỉ vậy, các phụ kiện của chiếc máy này cũng rất nhiều tiền, ví dụ cục pin đi kèm cũng tầm 4,5 triệu ~ 5 triệu đồng một cục. Cả thẻ nhớ cũng có giá 12 triệu đồng, còn có cả hai khe cắm&nbsp;thẻ. </p>
-              <figure class="figure--half">  <img src="img/img--review/article-img-3.jpg" alt="">
+              <figure class="figure--half">  <img src="img/img--review/article-img-3.jpg" alt="1DX mark III">
                 <figcaption>1DX Mark III có hai khe cắm thẻ CFexpress</figcaption>
               </figure>
-              <figure class="figure--half">  <img src="img/img--review/article-img-4.jpg" alt="">
+              <figure class="figure--half">  <img src="img/img--review/article-img-4.jpg" alt="1DX mark III">
                 <figcaption>Các cổng kết nối trên Canon 1DX mark III</figcaption>
               </figure>
-              <figure class="figure--half"> <img src="img/img--review/article-img-5.jpg" alt="">
+              <figure class="figure--half"> <img src="img/img--review/article-img-5.jpg" alt="1DX mark III">
                 <figcaption>Ở mặt trước bên phải, ta có phần tay cầm dọc da khổng lồ. Cạnh lens là rất nhiều nút&nbsp;bấm.</figcaption>
               </figure>
-              <figure class="figure--half"> <img src="img/img--review/article-img-7.jpg" alt="">
+              <figure class="figure--half"> <img src="img/img--review/article-img-7.jpg" alt="1DX mark III">
                 <figcaption>Khi quay dọc máy ra, ta sẽ thấy đây chính là báng tay cầm thứ hai. 1DX mark III còn có màn hình phụ và các nút điều&nbsp;khiển.</figcaption>
               </figure>
             </div>
             <div class="article__section article__section--features"> 
               <h2 class="article__header">TÍNH NĂNG</h2>
               <p class="article__text">Dù chụp ở môi trường gần như tối hoàn toàn. Canon 1DX Mark III vẫn bắt nét được ngay lập tức, rất nhanh và đáng tin&nbsp;cậy</p>
-              <figure> <img src="img/img--review/article-img-8.png" alt="">
+              <figure> <img src="img/img--review/article-img-8.png" alt="1DX mark III">
                 <figcaption>F-stop: f/2.8 | Exposure Time: 1/30 sec | ISO Speed: 100&nbsp;|&nbsp;Lens:&nbsp;EF85mm&nbsp;f/1.4L&nbsp;IS&nbsp;USM       </figcaption>
               </figure>
             </div>
@@ -139,15 +139,15 @@
           </div>
         </div>
         <aside class="review__aside-area hidden-till-md">
-          <h3 class="aside__header">Đọc nhiều nhất</h3><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-1.png" alt="">
-            <p class="aside__post--header">D500 Review: Canh bạc của Nikon</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-2.jpg" alt="">
-            <p class="aside__post--header">Vị thế hiện tại của 2 ông lớn Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-3.png" alt="">
+          <h3 class="aside__header">Đọc nhiều nhất</h3><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-1.png" alt="nikon D500">
+            <p class="aside__post--header">D500 Review: Canh bạc của Nikon</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-2.jpg" alt="canon nikon">
+            <p class="aside__post--header">Vị thế hiện tại của 2 ông lớn Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-3.png" alt="nikon D5600">
             <p class="aside__post--header">D5600 Review: Máy ảnh cho mọi nhà</p></a>
         </aside>
       </section>
     </main>
     <footer class="dark-side" id="footer"> 
-      <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
+      <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh">
         <ul class="footer__menu d-flex justify-content-between align-items-center">
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Giới thiệu</a></li>
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Hỗ trợ</a></li>
