--- a/halo/review.html
+++ b/halo/review.html
@@ -18,7 +18,7 @@
     <header id="header">
       <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-xl px-4 px-sm-5 px-xl-0">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt=""></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh"></a>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="search-bar-till-md">
               <input class="search-area" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="search-result.html"><i class="fas fa-search"></i></a>
@@ -51,7 +51,7 @@
           <div class="modal-content"> 
             <div class="modal-header flex-wrap">
               <button class="close" type="button" data-dismiss="modal">&times;</button>
-              <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt=""></div>
+              <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt="halo thế giới máy ảnh"></div>
               <p class="w-100 font-18 text-center font-weight-bold log">Đăng nhập  </p>
               <p class="w-100 font-18 text-center font-weight-bold reg">Đăng ký</p>
             </div>
@@ -78,7 +78,7 @@
               <button class="btn logreg__submit btn--dark log">Đăng nhập</button>
               <button class="btn logreg__submit btn--dark font-14 reg">Gia nhập cộng đồng HALO</button>
               <p class="log">Hoặc đăng nhập với </p>
-              <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt=""></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt=""></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt=""></a></div>
+              <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt="halo thế giới máy ảnh"></a></div>
             </div>
             <div class="modal-footer"><a class="logreg-portal mx-auto reg" onclick="logregSwitch()">Quay lại đăng nhập</a>
               <p class="mx-auto log">Chưa có tài khoản? <a class="logreg-portal" onclick="logregSwitch()">Đăng ký ngay </a></p>
@@ -92,7 +92,7 @@
           <li class="breadcrumb-item active">Đánh giá</li>
         </ul>
       </div>
-      <div class="review__main-banner"><img class="main-banner__logo" src="img/img--misc/logo-white.png" alt=""><img class="main-banner__text" src="img/img--review/banner-text.png" alt=""></div>
+      <div class="review__main-banner"><img class="main-banner__logo" src="img/img--misc/logo-white.png" alt="đánh giá máy ảnh"><img class="main-banner__text" src="img/img--review/banner-text.png" alt="đánh giá máy ảnh"></div>
       <section class="display-till-md">
         <div class="carousel slide" id="sub-banner-area--min" data-ride="carousel" data-touch="true" data-interval="false">
           <ul class="carousel-indicators">
@@ -101,41 +101,41 @@
             <li data-target="#sub-banner-area--min" data-slide-to="2"></li>
             <li data-target="#sub-banner-area--min" data-slide-to="3"></li>
           </ul>
-          <div class="carousel-inner"><a class="carousel-item active" href="review-details.html"> <img src="/halo/img/img--review/review-big-banner-xl-sfw.jpg" alt="">
+          <div class="carousel-inner"><a class="carousel-item active" href="review-details.html"> <img src="/halo/img/img--review/review-big-banner-xl-sfw.jpg" alt="Canon M5">
               <div class="carousel-caption">
                 <h3>Một ngày cùng Canon M5</h3>
-              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-small-banner-xl-sfw-1.jpg" alt="">
+              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-small-banner-xl-sfw-1.jpg" alt="Sony A6400">
               <div class="carousel-caption">
                 <h3>Sony A6400 Review </h3>
-              </div><span class="easter-egg"> </span></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-small-banner-xl-sfw-2.jpg" alt="">
+              </div><span class="easter-egg"> </span></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-small-banner-xl-sfw-2.jpg" alt="Canon 85mm f/1.8">
               <div class="carousel-caption">
-                <h3>Canon 85mm Review         </h3>
-              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-small-banner-xl-sfw-3.jpg" alt="">
+                <h3>Canon 85mm f/1.8 Review         </h3>
+              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-small-banner-xl-sfw-3.jpg" alt="150-600mm f/5-6.3">
               <div class="carousel-caption">
                 <h3>Sigma 150-600mm f/5-6.3 Review</h3>
               </div></a></div><a class="carousel-control-prev" href="#sub-banner-area--min" data-slide="prev"><span class="carousel-control-prev-icon"></span></a><a class="carousel-control-next" href="#sub-banner-area--min" data-slide="next"><span class="carousel-control-next-icon"></span></a>
         </div>
       </section>
-      <section class="container-xl hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="review-details.html"><img class="display-till-xl" src="/halo/img/img--review/review-big-banner-md-sfw.jpg" alt=""><img class="hidden-till-xl" src="/halo/img/img--review/review-big-banner-xl-sfw.jpg" alt="">
+      <section class="container-xl hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="review-details.html"><img class="display-till-xl" src="/halo/img/img--review/review-big-banner-md-sfw.jpg" alt="Canon M5"><img class="hidden-till-xl" src="/halo/img/img--review/review-big-banner-xl-sfw.jpg" alt="Canon M5">
           <div class="sub-banner__caption"><span>Một ngày cùng Canon M5</span></div></a>
-        <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-small-banner-xl-sfw-1.jpg" alt="">
-            <div class="sub-banner__caption"><span>Sony A6400 Review</span></div></a><a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-small-banner-xl-sfw-2.jpg" alt="">
-            <div class="sub-banner__caption"><span>Nikon Z7 Review</span></div></a><a class="review__sub-banner--small hidden-till-xl" href="review-details.html"><img src="img/img--review/review-small-banner-xl-sfw-3.jpg" alt="">
+        <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-small-banner-xl-sfw-1.jpg" alt="Sony A6400">
+            <div class="sub-banner__caption"><span>Sony A6400 Review</span></div></a><a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-small-banner-xl-sfw-2.jpg" alt="Nikon Z7">
+            <div class="sub-banner__caption"><span>Nikon Z7 Review</span></div></a><a class="review__sub-banner--small hidden-till-xl" href="review-details.html"><img src="img/img--review/review-small-banner-xl-sfw-3.jpg" alt="Sigma 150-600mm f/5-6.3">
             <div class="sub-banner__caption"><span>Sigma 150-600mm f/5-6.3 Review</span></div></a></div>
       </section>
       <section class="main-area container-xl">
         <div class="review__post-area">
-          <div class="review__post-collection"><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-post-img-1.jpg" alt="">
+          <div class="review__post-collection"><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-post-img-1.jpg" alt="đánh giá Canon EOS 1DX Mark III">
               <div class="review__post--content"> 
                 <h1 class="post__header text-left">Canon EOS 1DX Mark III: Vua của các vị&nbsp;vua</h1>
                 <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
                 <p class="post__preview">Cầm 1DX mark III không chỉ mang lại sự phấn khích với thiết bị công nghệ cao mà còn là niềm cảm hứng bất tận khi tác&nbsp;nghiệp.</p>
-              </div></a><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-post-img-2.png" alt="">
+              </div></a><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-post-img-2.png" alt="Top 5 DSLR đáng mua 2021">
               <div class="review__post--content"> 
                 <h1 class="post__header text-left">Top 5 DSLR đáng mua năm&nbsp;2021</h1>
                 <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
                 <p class="post__preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,...  lựa chọn một chiếc máy ảnh phù hợp là điều không&nbsp;đơn&nbsp;giản.</p>
-              </div></a><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-post-img-3.jpg" alt="">
+              </div></a><a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-post-img-3.jpg" alt="đánh giá Canon EF 70-200mm f/2.8L IS III USM">
               <div class="review__post--content"> 
                 <h1 class="post__header text-left">Canon EF 70-200mm f/2.8L IS III USM: Ống kính tele "trấn&nbsp;phái"</h1>
                 <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
@@ -149,15 +149,15 @@
           <button class="btn btn--seemore btn--dark">Xem thêm</button>
         </div>
         <aside class="review__aside-area hidden-till-md">
-          <h3 class="aside__header">Đọc nhiều nhất</h3><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-1.png" alt="">
-            <p class="aside__post--header">D500 Review: Canh bạc của Nikon</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-2.jpg" alt="">
-            <p class="aside__post--header">Vị thế hiện tại của 2 ông lớn Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-3.png" alt="">
+          <h3 class="aside__header">Đọc nhiều nhất</h3><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-1.png" alt="đánh giá nikon D500">
+            <p class="aside__post--header">D500 Review: Canh bạc của Nikon</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-2.jpg" alt="nikon canon">
+            <p class="aside__post--header">Vị thế hiện tại của 2 ông lớn Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-3.png" alt="đánh giá nikon D5600">
             <p class="aside__post--header">D5600 Review: Máy ảnh cho mọi nhà</p></a>
         </aside>
       </section>
     </main>
     <footer class="dark-side" id="footer"> 
-      <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
+      <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh">
         <ul class="footer__menu d-flex justify-content-between align-items-center">
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Giới thiệu</a></li>
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Hỗ trợ</a></li>
