--- a/halo/index.html
+++ b/halo/index.html
@@ -18,7 +18,7 @@
     <header id="header">
       <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-xl px-4 px-sm-5 px-xl-0">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt=""></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh"></a>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="search-bar-till-md">
               <input class="search-area" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="search-result.html"><i class="fas fa-search"></i></a>
@@ -51,7 +51,7 @@
           <div class="modal-content"> 
             <div class="modal-header flex-wrap">
               <button class="close" type="button" data-dismiss="modal">&times;</button>
-              <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt=""></div>
+              <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt="halo thế giới máy ảnh"></div>
               <p class="w-100 font-18 text-center font-weight-bold log">Đăng nhập  </p>
               <p class="w-100 font-18 text-center font-weight-bold reg">Đăng ký</p>
             </div>
@@ -78,7 +78,7 @@
               <button class="btn logreg__submit btn--dark log">Đăng nhập</button>
               <button class="btn logreg__submit btn--dark font-14 reg">Gia nhập cộng đồng HALO</button>
               <p class="log">Hoặc đăng nhập với </p>
-              <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt=""></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt=""></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt=""></a></div>
+              <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt="halo thế giới máy ảnh"></a></div>
             </div>
             <div class="modal-footer"><a class="logreg-portal mx-auto reg" onclick="logregSwitch()">Quay lại đăng nhập</a>
               <p class="mx-auto log">Chưa có tài khoản? <a class="logreg-portal" onclick="logregSwitch()">Đăng ký ngay </a></p>
@@ -111,13 +111,13 @@
               </div>
               <div class="carousel-caption__img"></div>
               <div class="carousel-caption__extra hidden-till-md">
-                <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-1-extra-1.png" alt="">
+                <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-1-extra-1.png" alt="Canon EOS R">
                   <p class="extra-text">LẤY NÉT TỰ ĐỘNG DUAL PIXEL CMOS </p>
                 </div>
-                <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-1-extra-2.png" alt="">
+                <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-1-extra-2.png" alt="Canon EOS R">
                   <p class="extra-text">TỐI ƯU HÓA ĐIỀU KHIỂN </p>
                 </div>
-                <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-1-extra-3.png" alt="">
+                <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-1-extra-3.png" alt="Canon EOS R">
                   <p class="extra-text">QUAY VIDEO ĐA CHẾ ĐỘ ĐỘ PHÂN GIẢI 4K</p>
                 </div>
               </div>
@@ -132,16 +132,16 @@
                     <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
                   </div>
                   <div class="logo-sony-a9-wrapper">
-                    <p class="logo-sony">SONY</p><img class="a9-logo" src="img/img--carousel/a9-logo.png" alt="">
+                    <p class="logo-sony">SONY</p><img class="a9-logo" src="img/img--carousel/a9-logo.png" alt="SONY a9 mark 2">
                   </div>
                   <div class="progress display-till-md" style="height: 5px">
                     <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 100%; height: 5px"></div>
                   </div>
                 </div>
                 <div class="carousel-caption__extra hidden-till-md">
-                  <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-1.png" alt=""></div>
-                  <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-2.png" alt=""></div>
-                  <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-3.png" alt=""></div>
+                  <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-1.png" alt="SONY a9 mark 2"></div>
+                  <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-2.png" alt="SONY a9 mark 2"></div>
+                  <div class="extra"><img class="extra-img" src="img/img--carousel/carousel-2-extra-3.png" alt="SONY a9 mark 2"></div>
                 </div>
                 <p class="main-carousel__text display-till-md">SỰ HOÀN HẢO</p>
                 <p class="main-carousel__text hidden-till-md">Sự hoàn hảo chưa bao giờ đơn giản đến vậy</p>
@@ -155,7 +155,7 @@
               <h1 class="carousel-title font-weight-bold">Tiêu điểm tháng 1</h1>
               <div class="carousel-caption__text">
                 <div class="logo-wrapper-3">
-                  <p class="logo-sony">SONY</p><span class="collab"><i class="fas fa-times"></i></span><img class="lotr-logo" src="img/img--carousel/lotr-logo.png" alt="">
+                  <p class="logo-sony">SONY</p><span class="collab"><i class="fas fa-times"></i></span><img class="lotr-logo" src="img/img--carousel/lotr-logo.png" alt="lord of the rings">
                 </div>
                 <div class="carousel-caption__img--triple hidden-till-md">
                   <div class="carousel-caption__img"></div>
@@ -178,7 +178,7 @@
               <h3 class="font-italic">
                  Phá bỏ giới hạn từ chiếc máy ảnh du lịch giá rẻ<br>và cả smartphone đắt tiền của bạn</h3><a class="btn btn--dark seemore-btn" href="camera-hub.html">Xem chi tiết</a>
             </div>
-            <div class="intro__img col-md" data-aos="fade-left" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000"><img src="img/img--camera-body/camera-intro-imgv2.png" alt=""></div>
+            <div class="intro__img col-md" data-aos="fade-left" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000"><img src="img/img--camera-body/camera-intro-imgv2.png" alt="Máy ảnh tốt nhất"></div>
           </div>
         </div>
       </section>
@@ -189,7 +189,7 @@
               <h1>Ống kính máy ảnh</h1>
               <h3 class="font-italic">Góc nhìn mới, cảm nhận mới, thế giới mới</h3><a class="btn btn--light seemore-btn" href="camera-hub.html">Xem chi tiết</a>
             </div>
-            <div class="intro__img col-md" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000"><img src="img/img--lens/lens-intro-imgv2.png" alt=""></div>
+            <div class="intro__img col-md" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000"><img src="img/img--lens/lens-intro-imgv2.png" alt="lens máy ảnh tốt nhất"></div>
           </div>
         </div>
       </section>
@@ -199,13 +199,13 @@
             <h1>Phụ kiện máy ảnh</h1>
             <h3 class="font-italic">Dù “pro” đến mấy cũng cần các trợ thủ đắc lực</h3><a class="btn btn--dark seemore-btn mx-auto" href="camera-hub.html" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="1000">Xem chi tiết</a>
           </div>
-          <div class="intro__img" data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000"><a href="camera-hub.html"> <img src="img/img--equip/equip-intro--xl.jpg" alt=""></a></div>
+          <div class="intro__img" data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000"><a href="camera-hub.html"> <img src="img/img--equip/equip-intro--xl.jpg" alt="phụ kiện máy ảnh tốt nhất"></a></div>
         </div>
       </section>
       <section class="specials dark-side">
         <div class="container-xl px-sm-5 px-xl-0 d-flex flex-column align-items-center">
           <h1>Đối tác chiến lược</h1>
-          <div class="brands__img row"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-sony.png" alt=""><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-nikon.png" alt=""><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-canon.png" alt=""><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-sigma.png" alt=""></div>
+          <div class="brands__img row"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-sony.png" alt="Sony chính hãng"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-nikon.png" alt="Canon chính hãng"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-canon.png" alt="Nikon chính hãng"><img class="brands-item col-6 col-md-3" src="img/img--misc/brands-sigma.png" alt="Sigma chính hãng"></div>
           <div class="brands__text">
             <h3 class="font-italic text-center mw-900">Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: <span class="font-weight-bold">từ 12 tháng lên 24 tháng</span></h3>
           </div>
@@ -235,12 +235,12 @@
       <section class="promo">
         <div class="container-xl px-sm-5 px-xl-0">
           <h1>Tin khuyến mại</h1>
-          <div class="promo__collection row"><a class="promo-item col-sm-4" href="#"><img src="img/img--misc/promo-img-1.jpg" alt=""></a><a class="promo-item col-sm-4" href="#">  <img src="img/img--misc/promo-img-2.jpg" alt=""></a><a class="promo-item col-sm-4" href="#"><img src="img/img--misc/promo-img-1.jpg" alt=""></a></div><a class="btn btn--dark seemore-btn mx-auto" href="#">Xem thêm</a>
+          <div class="promo__collection row"><a class="promo-item col-sm-4" href="#"><img src="img/img--misc/promo-img-1.jpg" alt="khuyến mại máy ảnh"></a><a class="promo-item col-sm-4" href="#">  <img src="img/img--misc/promo-img-2.jpg" alt="khuyến mại máy ảnh"></a><a class="promo-item col-sm-4" href="#"><img src="img/img--misc/promo-img-1.jpg" alt="khuyến mại máy ảnh"></a></div><a class="btn btn--dark seemore-btn mx-auto" href="#">Xem thêm</a>
         </div>
       </section>
       <section class="review dark-side">
         <div class="container-xl px-sm-5 mw-900">
-          <h1>HALO review</h1><a class="review-item d-flex" href="review-details.html" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="">
+          <h1>HALO review</h1><a class="review-item d-flex" href="review-details.html" data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="Top DSLR đáng mua năm 2021">
             <div class="review-item__content d-flex flex-column justify-content-between">
               <div class="review-header d-flex flex-wrap align-items-start align-content-start">
                 <h2 class="w-100 font-weight-bold">Top 5 DSLR đáng mua năm 2021</h2>
@@ -248,7 +248,7 @@
                 <p class="subtext font-italic font-weight-light"><i class="far fa-clock mx-2"></i>01/01/2021</p>
               </div>
               <p class="review-preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
-            </div></a><a class="review-item d-flex" href="review-details.html" data-aos="fade-left" data-aos-offset="50" data-aos-easing="ease-in-sine" data-aos-duration="1000"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="">
+            </div></a><a class="review-item d-flex" href="review-details.html" data-aos="fade-left" data-aos-offset="50" data-aos-easing="ease-in-sine" data-aos-duration="1000"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="Top DSLR đáng mua năm 2021">
             <div class="review-item__content d-flex flex-column justify-content-between">
               <div class="review-header d-flex flex-wrap align-items-start align-content-start">
                 <h2 class="w-100 font-weight-bold">Top 5 DSLR đáng mua năm 2021</h2>
@@ -266,11 +266,11 @@
           <button class="btn connection__submit-btn btn-primary font-italic">Gửi</button>
         </form>
         <p class="connection__text text-center">Hoặc theo dõi chúng tôi tại</p>
-        <div class="connection__socials d-flex justify-content-between mx-auto"><a class="socials__item d-block" href="#"><img src="img/img--misc/social-fb.png" alt=""></a><a class="socials__item d-block" href="#"><img src="img/img--misc/social-insta.png" alt=""></a><a class="socials__item d-block" href="#"><img class="h-100" src="img/img--misc/social-twitter.png" alt=""></a></div>
+        <div class="connection__socials d-flex justify-content-between mx-auto"><a class="socials__item d-block" href="#"><img src="img/img--misc/social-fb.png" alt="halo thế giới máy ảnh"></a><a class="socials__item d-block" href="#"><img src="img/img--misc/social-insta.png" alt="halo thế giới máy ảnh"></a><a class="socials__item d-block" href="#"><img class="h-100" src="img/img--misc/social-twitter.png" alt="halo thế giới máy ảnh"></a></div>
       </section>
     </main>
     <footer class="dark-side" id="footer"> 
-      <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
+      <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh">
         <ul class="footer__menu d-flex justify-content-between align-items-center">
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Giới thiệu</a></li>
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Hỗ trợ</a></li>
