--- a/halo/parts/card-1.html
+++ b/halo/parts/card-1.html
@@ -1,5 +1,5 @@
 
-<div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""/><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""/><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt=""/>
+<div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt="canon-eos-5d-mark-iv"/><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""/><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt=""/>
   <div class="card-body text-center">
     <div class="item__header">
       <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark&nbsp;IV</p>
