--- a/halo/parts/card-5.html
+++ b/halo/parts/card-5.html
@@ -1,5 +1,5 @@
 
-<div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""/><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""/><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt=""/>
+<div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt="Canon EOS 1DX Mark III"/><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""/><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt=""/>
   <div class="card-body text-center">
     <div class="item__header">
       <p class="item__name font-weight-bold">Canon EOS 1DX Mark&nbsp;III</p>
