--- a/halo/parts/footer.html
+++ b/halo/parts/footer.html
@@ -1,6 +1,6 @@
 
 <footer class="dark-side" id="footer"> 
-  <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt=""/>
+  <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh"/>
     <ul class="footer__menu d-flex justify-content-between align-items-center">
       <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Giới thiệu</a></li>
       <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Hỗ trợ</a></li>
