--- a/halo/parts/logreg.html
+++ b/halo/parts/logreg.html
@@ -4,7 +4,7 @@
     <div class="modal-content"> 
       <div class="modal-header flex-wrap">
         <button class="close" type="button" data-dismiss="modal">&times;</button>
-        <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt=""/></div>
+        <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt="halo thế giới máy ảnh"/></div>
         <p class="w-100 font-18 text-center font-weight-bold log">Đăng nhập  </p>
         <p class="w-100 font-18 text-center font-weight-bold reg">Đăng ký</p>
       </div>
@@ -31,7 +31,7 @@
         <button class="btn logreg__submit btn--dark log">Đăng nhập</button>
         <button class="btn logreg__submit btn--dark font-14 reg">Gia nhập cộng đồng HALO</button>
         <p class="log">Hoặc đăng nhập với </p>
-        <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt=""/></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt=""/></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt=""/></a></div>
+        <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt="halo thế giới máy ảnh"/></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt="halo thế giới máy ảnh"/></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt="halo thế giới máy ảnh"/></a></div>
       </div>
       <div class="modal-footer"><a class="logreg-portal mx-auto reg" onclick="logregSwitch()">Quay lại đăng nhập</a>
         <p class="mx-auto log">Chưa có tài khoản? <a class="logreg-portal" onclick="logregSwitch()">Đăng ký ngay </a></p>
