--- a/halo/parts/review-post-2.html
+++ b/halo/parts/review-post-2.html
@@ -1,4 +1,4 @@
-<a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-post-img-2.png" alt=""/>
+<a class="review__post" href="review-details.html"><img class="review__post--img" src="img/img--review/review-post-img-2.png" alt="Top 5 DSLR đáng mua 2021"/>
   <div class="review__post--content"> 
     <h1 class="post__header text-left">Top 5 DSLR đáng mua năm&nbsp;2021</h1>
     <p class="post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></p>
