--- a/halo/payment.html
+++ b/halo/payment.html
@@ -20,7 +20,7 @@
     <header id="header">
       <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-xl px-4 px-sm-5 px-xl-0">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt=""></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh"></a>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="search-bar-till-md">
               <input class="search-area" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="search-result.html"><i class="fas fa-search"></i></a>
@@ -53,7 +53,7 @@
           <div class="modal-content"> 
             <div class="modal-header flex-wrap">
               <button class="close" type="button" data-dismiss="modal">&times;</button>
-              <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt=""></div>
+              <div class="logreg__logo w-100 mb-3 d-flex justify-content-center"><img src="img/img--misc/logo-black.png" alt="halo thế giới máy ảnh"></div>
               <p class="w-100 font-18 text-center font-weight-bold log">Đăng nhập  </p>
               <p class="w-100 font-18 text-center font-weight-bold reg">Đăng ký</p>
             </div>
@@ -80,7 +80,7 @@
               <button class="btn logreg__submit btn--dark log">Đăng nhập</button>
               <button class="btn logreg__submit btn--dark font-14 reg">Gia nhập cộng đồng HALO</button>
               <p class="log">Hoặc đăng nhập với </p>
-              <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt=""></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt=""></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt=""></a></div>
+              <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt="halo thế giới máy ảnh"></a></div>
             </div>
             <div class="modal-footer"><a class="logreg-portal mx-auto reg" onclick="logregSwitch()">Quay lại đăng nhập</a>
               <p class="mx-auto log">Chưa có tài khoản? <a class="logreg-portal" onclick="logregSwitch()">Đăng ký ngay </a></p>
@@ -271,7 +271,7 @@
       </div>
     </main>
     <footer class="dark-side" id="footer"> 
-      <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="">
+      <div class="container px-sm-5 mw-900 d-flex flex-column justify-content-center align-items-center"><img class="footer__logo" src="img/img--misc/logo-white.png" alt="halo thế giới máy ảnh">
         <ul class="footer__menu d-flex justify-content-between align-items-center">
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Giới thiệu</a></li>
           <li class="footer__item d-flex justify-content-center align-items-center"><a class="footer__link text-center font-weight-bold" href="#">Hỗ trợ</a></li>
